metronome bug fixes and i18n

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -58,6 +58,13 @@
 	"metronome.main.step": "Step ",
 	"metronome.main.title": "Metro",
 	"metronome.main.tonic": "Tonic",
+	"metronome.modal.info.buttons.animations": "Animations",
+	"metronome.modal.info.buttons.animations-text": "Toggles the animations of the metronomes",
+	"metronome.modal.info.buttons.back": "Back",
+	"metronome.modal.info.buttons.back-text": "Goes back to the metronome options",
+	"metronome.modal.info.buttons.mute": "Mute",
+	"metronome.modal.info.buttons.mute-text": "Mutes the metronomes",
+	"metronome.modal.info.buttons.what": "What do the buttons do?",
 	"notefinder.info.buttons.delete": "Delete",
 	"notefinder.info.buttons.delete-text": "Unselects all the filters",
 	"notefinder.info.buttons.random": "Randomize",
