--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -58,6 +58,13 @@
 	"metronome.main.step": "Incremento",
 	"metronome.main.title": "Metro",
 	"metronome.main.tonic": "Tonica",
+	"metronome.modal.info.buttons.animations": "Animazioni",
+	"metronome.modal.info.buttons.animations-text": "Attiva le animazioni dei metronomi",
+	"metronome.modal.info.buttons.back": "Indietro\n",
+	"metronome.modal.info.buttons.back-text": "Torna indietro alle impostazioni del metronomo",
+	"metronome.modal.info.buttons.mute": "Muto",
+	"metronome.modal.info.buttons.mute-text": "Muta i metronomi",
+	"metronome.modal.info.buttons.what": "Cosa fanno i bottoni?",
 	"notefinder.info.buttons.delete": "Ripristina",
 	"notefinder.info.buttons.delete-text": "Deseleziona tutti i filtri",
 	"notefinder.info.buttons.random": "Randomizza",
